2021-06-13  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* fwrite.c: Avoid segmentation fault for unwritable fopen.
	Recognize symhead_{positive,negative} for non-default
	character_order. 
	* pageread.c, styfile.c: Exit code 255 for non-existent
	style/log file.
	* version.h: Date [13-Jun-2021], but still Version 3.5 (bugfix
	only).

2021-06-06  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* configure.ac, version.h:
	Version 3.5 [6-Jun-2021].
	* main.c, styfile.c:
	Accept multiple numbers of style files by option '-s'.
	* tests/mendex.test, tests/uni[12].ist:
	Add a new test.
	* mendex.1{,ja}, mendex.ja.txt:
	Update documents.

2021-05-19  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* main.c, configure.ac, version.h:
	Version 3.4 [19-May-2021].
	* styfile.c, var.h, exvar.h:
	Fix a bug of reading keywords "setpage_prefix", "setpage_suffix"
	in style file.
	More strictly check string length.

2021-05-09  Karl Berry  <karl@freefriends.org>

	* mendex.h (page.attr): use int, not char, since we do signed
	comparison and aarch64 apparently treats char as unsigned.
	(index.words): use unsigned char for consistency.
	* fwrite.c (printpage): factor out beginning/end page values.
	* tests/rangetwo.idx,
	* tests/rangetwo.ind,
	* tests/rangetwo.ist: new simple test.
	* tests/mendex.test: run the rangetwo test.
	Report from Johannes Hielscher,
	https://tug.org/pipermail/tlbuild/2021q1/004873.html.

2021-03-23  Karl Berry  <karl@tug.org>

	* TL'21.

2021-03-21  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* main.c, configure.ac, version.h:
	Version 3.3 [21-Mar-2021].
	* fread.c: Fix a bug about page_precedence in style.
	Thanks to Suzana Sagadin for the report.
	* tests/pprec[012].ist, tests/pprecA.idx, tests/pprecA-[012].ind,
	tests/mendex.test, Makefile.am:
	Add new tests.

2020-01-16  Karl Berry  <karl@freefriends.org>

	* COPYRIGHT,
	* main.c: 2021.

2020-05-01  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* main.c, version.h, Makefile.{am.in}: Add bug report addresses