@@ -75,13 +75,9 @@ void styread(const char *filename)
 		if (getparam(buff,"symhead_negative",symhead_negative)) continue;
 		if (getparam(buff,"numhead_positive",numhead_positive)) continue;
 		if (getparam(buff,"numhead_negative",numhead_negative)) continue;
-		cc=scompare(buff,"lethead_flag");
-		if (cc!= -1) {
-			lethead_flag=atoi(&buff[cc]);
-			continue;
-		}
-		cc=scompare(buff,"heading_flag");
-		if (cc!= -1) {
+		if ( (cc=scompare(buff,"lethead_flag")) != -1 ||
+		     (cc=scompare(buff,"heading_flag")) != -1 ||
+		     (cc=scompare(buff,"headings_flag")) != -1 ) {
 			lethead_flag=atoi(&buff[cc]);
 			continue;
 		}
@@ -134,6 +130,13 @@ void styread(const char *filename)
 		if (getparam(buff,"page_compositor",page_compositor)) continue;
 		if (getparam(buff,"page_precedence",page_precedence)) continue;
 		if (getparam(buff,"character_order",character_order)) continue;
+
+		cc=strcspn(buff," \t\r\n");
+		if (cc>0) buff[cc]='\0';
+		if (buff[0]=='%' || buff[0]=='\n') continue;
+		if (strlen(buff)>0) {
+			verb_printf(efp,"\nWarning: Unknown specifier (%s).", buff);
+		}
 	}
 	nkf_close(fp);
 
